@@ -3,7 +3,7 @@ $LastChangedBy$
 $Date$
 -->
 
-<!ENTITY day          "06">                   <!-- Always 2 digits -->
+<!ENTITY day          "07">                   <!-- Always 2 digits -->
 <!ENTITY month        "03">                   <!-- Always 2 digits -->
 <!ENTITY year         "2008">
 <!ENTITY version      "svn-&year;&month;&day;">
@@ -44,7 +44,7 @@ $Date$
 <!ENTITY lfs-gcc-version              "4.1.2">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20071221">
+<!ENTITY blfs-bootscripts-version     "20080306">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!ENTITY blfs-wiki                    "http://wiki.&lfs-domainname;/blfs/wiki">
